cmake_minimum_required(VERSION 2.8)
project( Fsearch )
find_package( OpenCV REQUIRED )
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    # set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
endif()
SET(GCC_COVERAGE_COMPILE_FLAGS "-lopencv_core -lopencv_imgproc -lopencv_objdetect -lopencv_highgui")
# SET(GCC_COVERAGE_LINK_FLAGS    "-lgcov")
add_executable( videoRead cpuread.cpp )
target_link_libraries( videoRead ${OpenCV_LIBS} -D WITH_OPENMP=ON )
